// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = {};

=====================================output=====================================
// @flow

module.exports = {};

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = { f: {} };

=====================================output=====================================
// @flow

module.exports = { f: {} };

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const obj = { f: {} };

obj.f = { x: 1 };
obj.f = { x: "a" };

module.exports = obj;

=====================================output=====================================
// @flow

const obj = { f: {} };

obj.f = { x: 1 };
obj.f = { x: "a" };

module.exports = obj;

================================================================================
`;

exports[`d.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const obj = { };

obj.f = { x: 1 };
obj["g"] = { x: "a" };

module.exports = obj;

=====================================output=====================================
// @flow

const obj = {};

obj.f = { x: 1 };
obj["g"] = { x: "a" };

module.exports = obj;

================================================================================
`;

exports[`e.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const obj = {};
declare function foo(x: { a: number }): void;
foo(obj);
module.exports = obj;

=====================================output=====================================
// @flow

const obj = {};
declare function foo(x: { a: number }): void;
foo(obj);
module.exports = obj;

================================================================================
`;

exports[`f.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const obj = {};
(obj.f: number);
module.exports = obj;

=====================================output=====================================
// @flow

const obj = {};
(obj.f: number);
module.exports = obj;

================================================================================
`;

exports[`g.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

declare function foo<X: { a: 1 }>(x: X): void;

const obj = {};
foo(obj);
module.exports = obj;

=====================================output=====================================
// @flow

declare function foo<X: { a: 1 }>(x: X): void;

const obj = {};
foo(obj);
module.exports = obj;

================================================================================
`;

exports[`h.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow


let obj = {};
obj.x = 5;

module.exports = obj;

=====================================output=====================================
// @flow

let obj = {};
obj.x = 5;

module.exports = obj;

================================================================================
`;
